# recipe-vis

./: .gitignore  README.md
data_proc/: .gitignore  converter.ipynb  dbscan.ipynb  graph_analysis_final_results.json  graph_stats.py  ingredient_frequencies.json  llm_cleanup.ipynb  pyproject.toml  recipes.json
data_proc/scraper/: README.md  requirements.txt  scraper.py
recipe_flavors/src/: export_flavor_ingredients.py  export_flavor_map.py  export_many_recipes.py  rating_calculation.py
recipe_flavors/web/: app.js  index.html
recipe_flavors/web/data/: flavor_ingredients.json  recipe_0000.json  recipe_0001.json  recipe_0002.json  recipe_0003.json  recipe_0004.json  recipe_0005.json  recipe_0006.json  recipe_0007.json  recipe_0008.json  recipe_0009.json  recipe_0010.json  recipe_0011.json  recipe_0012.json  recipe_0013.json  recipe_0014.json  recipe_0015.json  recipe_0016.json  recipe_0017.json  recipe_0018.json  recipe_0019.json  recipe_0020.json  recipe_0021.json  recipe_0022.json  recipe_0023.json  recipe_0024.json  recipe_0025.json  recipe_0026.json  recipe_0027.json  recipe_0028.json  recipe_0029.json  recipe_0030.json  recipe_0031.json  recipe_0032.json  recipe_0033.json  recipe_0034.json  recipe_0035.json  recipe_0036.json  recipe_0037.json  recipe_0038.json  (+49961 more)
recipe_flavors/web/js/: charts.js  flavor.js  ui.js
vis/: index.html  package.json  tsconfig.app.json
vis/public/: data  frequencies.json  recipes.json
vis/public/workers/: randomWalker.ts
vis/src/: App.tsx  data.ts  dataChord.ts  main.tsx
vis/src/components/: FlavourComponent.tsx
(+14 files in other folders)
